re PR c/11885 (Problem with bitfields in packed structs)

PR c/11885
        * stor-layout.c (update_alignment_for_field): Packed non-bit-fields
        get byte alignment.

From-SVN: r72484